--- a/test1/index.html
+++ b/test1/index.html
@@ -30,13 +30,25 @@
         </header>
         <section class="consta">
             <div class="section1">
-                <a href="#" class="a4"><img src="assets/img/vector2.svg" alt="vector2"></a>
-                <img src="assets/img/img1.png" alt="img1">
+                <button class="prev a4"><img src="assets/img/vector2.svg" alt="vector2"></button>
+                <div class="wrapper">
+                    <div class="boxes">
+                        <div class="box red">
+                            <img src="assets/img/img1.png" alt="img1" class="ash">
+                        </div>
+                        <div class="box yellow">
+                            <img src="assets/img/img1.png" alt="img1" class="ash">
+                        </div>
+                        <div class="box green">
+                            <img src="assets/img/img1.png" alt="img1" class="ash">
+                        </div>
+                    </div>
+                </div>
                 <div class="banner">
                     <h3 class="h2">Get ready for Our stylist chair</h3>
                     <a href="#" class="a5">shop now</a>
                 </div>
-                <a href="#"><img src="assets/img/vector3.svg" alt="vector2"></a>
+                <button class="next"><img src="assets/img/vector3.svg" alt="vector2"></button>
             </div>
             <div class="ramka"></div>
         </section>
@@ -213,43 +225,43 @@
         <section class="consta">
             <h2 class="h5">TRENDING CATEGORIES</h2>
             <div class="slider1">
-                <button class="prev"><img src="assets/img/vector2.svg" alt=""></button>
-                <div class="wrapper">
-                    <div class="boxes">
+                <button class="left"><img src="assets/img/vector2.svg" alt=""></button>
+                <div class="per">
+                    <div class="xes">
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider1.svg" alt="slider1" class="slider-c1">
-                                <p class="slider-t">DRESSING TABLE</p>
+                            <div class="sass kor"><img src="assets/img/slider1.svg" alt="slider1" class="slider-c1">
+                                <p class="slider-t1">DRESSING TABLE</p>
                             </div>
                         </a>
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider2.svg" alt="slider2" class="slider-c2">
-                                <p class="slider-t">Lamp</p>
+                            <div class="sass kor"><img src="assets/img/slider2.svg" alt="slider2" class="slider-c2">
+                                <p class="slider-t2">Lamp</p>
                             </div>
                         </a>
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider3.svg" alt="slider3" class="slider-c3">
-                                <p class="slider-t">Cabinet</p>
+                            <div class="sass kor"><img src="assets/img/slider3.svg" alt="slider3" class="slider-c3">
+                                <p class="slider-t3">Cabinet</p>
                             </div>
                         </a>
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider4.svg" alt="slider4" class="slider-c4">
-                                <p class="slider-t">Sofa</p>
+                            <div class="sass kor"><img src="assets/img/slider4.svg" alt="slider4" class="slider-c4">
+                                <p class="slider-t4">Sofa</p>
                             </div>
                         </a>
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider5.svg" alt="slider5" class="slider-c5">
-                                <p class="slider-t">Chair</p>
+                            <div class="sass kor"><img src="assets/img/slider5.svg" alt="slider5" class="slider-c5">
+                                <p class="slider-t5">Chair</p>
                             </div>
                         </a>
                         <a href="#">
-                            <div class="box red"><img src="assets/img/slider6.svg" alt="slider6" class="slider-c6">
-                                <p class="slider-t">Bed</p>
+                            <div class="sass kor"><img src="assets/img/slider6.svg" alt="slider6" class="slider-c6">
+                                <p class="slider-t6">Bed</p>
                             </div>
                         </a>
 
                     </div>
                 </div>
-                <button class="next"><img src="assets/img/vector3.svg" alt=""></button>
+                <button class="right"><img src="assets/img/vector3.svg" alt=""></button>
             </div>
             <div class="boxone">
                 <div class="boxtwo">
